# krydo-stellar

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  DOCUMENTATION.md  README.md  SECURITY.md  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
api/: boot.ts  index.ts  ping.ts
client/src/: App.tsx  index.css
contracts/: Cargo.toml  deployment.json
contracts/audit/: Cargo.toml
contracts/audit/src/: lib.rs
contracts/audit/test_snapshots/test/: anchor_requires_auth_and_emits.1.json
contracts/authority/: Cargo.toml
contracts/authority/src/: lib.rs
contracts/authority/test_snapshots/test/: whitelist_lifecycle.1.json
contracts/credentials/: Cargo.toml
contracts/credentials/src/: lib.rs
docs/: krydo-stellar-business-plan.tex
script/: build.ts  clean-eth-legacy.ts  clean-pending-requests.ts  compile.ts  deploy-audit.ts  deploy.ts  print-vercel-env.ts  reanchor-creds.ts
server/: blockchain.ts  config.ts  createApp.ts  db.ts  index.ts  logger.ts  routes.ts  seed.ts  storage.ts  vite.ts  zk-engine.ts
server/auth/: jwt.test.ts  jwt.ts  nonce-store.ts  siwe.ts  siws.ts
server/crypto/: ec.test.ts  ec.ts  pedersen.test.ts  pedersen.ts  sigma.ts
server/middleware/: security.ts
server/routes/: credential-requests.ts  credentials.ts  health.ts  issuers.ts  network.ts  (+1 more)
shared/: claim-consistency.test.ts  claim-consistency.ts  claim-schemas.ts  contracts.ts  schema.ts  sep53.test.ts  sep53.ts  vc.test.ts  vc.ts
(+21 files in other folders)
